# werdxz-info

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  Rocket.toml  wrangler.toml
api/: Cargo.toml  README.md  wrangler.toml
api/migrations/: 0001_init.sql  0002_projects.sql
api/src/: errors.rs  lib.rs  logging.rs  middleware.rs
api/src/models/: blog.rs  mod.rs  post.rs  project.rs  resume.rs  tag.rs
api/src/openapi/: mod.rs  spec.rs
api/src/routes/: blogs.rs  meta.rs  mod.rs  posts.rs  projects.rs  resume.rs
api/src/storage/: blog.rs  d1.rs  mod.rs  r2.rs
api/static/: docs.html
api/static/docs/: index.html
api/tests/: api.hurl
blog/: package-lock.json  package.json  wrangler.jsonc
blog/public/: _headers  giscus-theme.css  manifest.json  robots.txt
blog/src/: global.css  root.tsx
css/: Cargo.toml  build.rs
css/css/: tailwind.config.js
openspec/: project.md
portfolio/: Cargo.toml  build.rs  index.html  wrangler.toml
portfolio/schemas/: about-content.json  experience.json  hero-content.json  project.json
portfolio/src/: app.rs  constants.rs  lib.rs  server_functions.rs  types.rs  worker_helpers.rs
portfolio/style/: main.css
projects/: .gitignore  README.md  client.ts  deno.json  vite.config.ts  wrangler.toml
projects/components/: StageBadge.tsx
projects/lib/: api.ts  (+1 more)
resume/: package-lock.json  package.json  wrangler.toml
scripts/: reset-db.sh  setup-hooks.sh  sync-from-r2.sh  sync-to-r2.sh
server/: Cargo.toml  bk.build.rs  build.rs
www/: package-lock.json  package.json  wrangler.toml
xtask/: Cargo.toml
(+131 files in other folders)
