[package]
name = "api"
version = "0.1.0"
edition.workspace = true
authors = ["WERDXZ <lwerdxzl@hotmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["d1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
utoipa = { version = "5", features = ["chrono"] }
regex = "1"
